优化文件结构

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,6 +13,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
-    RewriteCond %(/ststic) !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^ pc.console.php [L]
 </IfModule>
