--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,9 +9,12 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
+
     RewriteCond %{HTTP_HOST} ^denha.loc [NC]
+    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ pc.host.php
 
     RewriteCond %{HTTP_HOST} ^denha.console.loc [NC]
+    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ console.host.php
 </IfModule>
