--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,10 +11,10 @@
 
 
     RewriteCond %{HTTP_HOST} ^denha.loc [NC]
-    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
+    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.eot|\.svg|\.ttf|\.woff|\.wpff2|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ pc.host.php
 
     RewriteCond %{HTTP_HOST} ^denha.console.loc [NC]
-    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
+    RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.eot|\.svg|\.ttf|\.woff|\.wpff2|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ console.host.php
 </IfModule>
