--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,7 +14,7 @@
     RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.eot|\.svg|\.ttf|\.woff|\.wpff2|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ pc.host.php
 
-    RewriteCond %{HTTP_HOST} ^denha.console.loc [NC]
+    RewriteCond %{HTTP_HOST} ^console.denha.loc [NC]
     RewriteCond %{REQUEST_URI} !^.*(\.css|\.js|\.eot|\.svg|\.ttf|\.woff|\.wpff2|\.gif|\.png|\.jpg|\.jpeg|\.bmp)$ [NC]
     RewriteRule ^ console.host.php
 </IfModule>
