--- a/console/package.json
+++ b/console/package.json
@@ -70,6 +70,10 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vue-layer":"^0.8.0",
+    "vuex":"^2.0.0",
+    "vue-html5-editor":"^1.0.0",
+    "font-awesome":"^4.0.0",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
