增加博客内容添加模块

--- a/vhosts.conf
+++ b/vhosts.conf
@@ -1,91 +1,17 @@
 <VirtualHost *:80>
-    DocumentRoot "E:\cqproject\dbhash"
-    ServerName dbhash.puyin.loc
-    ServerAlias dbhash.puyin.loc
-  <Directory "E:\cqproject\dbhash">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-  </Directory>
-</VirtualHost>
-
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\jiabhoutai\web"
-    ServerName admin.com
-    ServerAlias admin.com
-  <Directory "E:\cqproject\jiabhoutai\web">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-  </Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\boss\Public"
-    ServerName boss.com
-    ServerAlias boss.com
-  <Directory "E:\cqproject\boss\Public">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-      DirectoryIndex boss.php
-  </Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\api\public"
-    ServerName api.puyin.xin
-    ServerAlias api.puyin.xin
-  <Directory "E:\cqproject\api\public">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-  </Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\weixin"
-    ServerName weixin.puyin.xin
-    ServerAlias weixin.puyin.xin
-  <Directory "E:\cqproject\weixin">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-      DirectoryIndex wap.php
-  </Directory>
-  <Location /Common/>
-      Order allow,deny
-      Deny from all
-  </Location>
-</VirtualHost>
-
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\denha\public"
+    DocumentRoot "E:\www\denha\public"
     ServerName console.denha.loc
     ServerAlias console.denha.loc
-  <Directory "E:\cqproject\denha\public">
+  <Directory "E:\wwww\denha\public">
       Options FollowSymLinks ExecCGI
       AllowOverride All
       Order allow,deny
       Allow from all
       Require all granted
       DirectoryIndex console.host.php
-      Header set Access-Control-Allow-Origin http://localhost:8080
+      Header set Access-Control-Allow-Origin *
   </Directory>
 </VirtualHost>
-
 
 <VirtualHost *:80>
     DocumentRoot "E:\cqproject\denha\public"
@@ -100,30 +26,3 @@
       DirectoryIndex pc.host.php
   </Directory>
 </VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\denha"
-    ServerName denha.one.loc
-    ServerAlias denha.one.loc
-  <Directory "E:\cqproject\denha">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-  </Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot "E:\cqproject\thinkphp5\public"
-    ServerName thinkphp.loc
-    ServerAlias thinkphp.loc
-  <Directory "E:\cqproject\thinkphp5\public">
-      Options FollowSymLinks ExecCGI
-      AllowOverride All
-      Order allow,deny
-      Allow from all
-      Require all granted
-  </Directory>
-</VirtualHost>
-
