博客前台首页

--- a/vhosts.conf
+++ b/vhosts.conf
@@ -26,3 +26,19 @@
       DirectoryIndex pc.host.php
   </Directory>
 </VirtualHost>
+
+
+<VirtualHost *:80>
+    DocumentRoot "E:\www\denha\public"
+    ServerName blog.denha.loc
+    ServerAlias blog.denha.loc
+  <Directory "E:\www\denha\public">
+      Options FollowSymLinks ExecCGI
+      AllowOverride All
+      Order allow,deny
+      Allow from all
+      Require all granted
+      DirectoryIndex blog.host.php
+      Header set Access-Control-Allow-Origin *
+  </Directory>
+</VirtualHost>
