--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,21 +2,21 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews
     </IfModule>
-
     RewriteEngine On
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
-
     RewriteCond %{HTTP_HOST} ^denha.loc [NC]
     RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic)(.*)$ [NC]
     RewriteRule ^ pc.host.php
 
-
-
     RewriteCond %{HTTP_HOST} ^console.denha.loc [NC]
     RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic)(.*)$ [NC]
     RewriteRule ^ console.host.php [L]
+
+    RewriteCond %{HTTP_HOST} ^blog.denha.loc [NC]
+    RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic)(.*)$ [NC]
+    RewriteRule ^ blog.host.php [L]
 </IfModule>
