--- a/vhosts.conf
+++ b/vhosts.conf
@@ -42,3 +42,18 @@
       Header set Access-Control-Allow-Origin *
   </Directory>
 </VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot "E:\cqproject\denha\console\dist"
+    ServerName console.dist.denha.loc
+    ServerAlias console.dist.denha.loc
+  <Directory "E:\cqproject\denha\console\dist">
+      Header set Access-Control-Allow-Origin localhost
+      Options FollowSymLinks ExecCGI
+      AllowOverride All
+      Order allow,deny
+      Allow from all
+      Require all granted
+      DirectoryIndex index.html
+  </Directory>
+</VirtualHost>
