增加nginx配置 优化图像上传显示

--- a/vhosts_apache.conf
+++ b/vhosts_apache.conf
@@ -45,8 +45,8 @@
 
 <VirtualHost *:80>
     DocumentRoot "E:\cqproject\denha\console\dist"
-    ServerName console.dist.denha.loc
-    ServerAlias console.dist.denha.loc
+    ServerName dist.denha.loc
+    ServerAlias dist.denha.loc
   <Directory "E:\cqproject\denha\console\dist">
       Header set Access-Control-Allow-Origin localhost
       Options FollowSymLinks ExecCGI
