--- a/vhosts_nginx.conf
+++ b/vhosts_nginx.conf
@@ -13,6 +13,7 @@ server {
         if ($rule_0 = "21") {
           rewrite ^/ /console.host.php last;
         }
+
         #rewrite ^ /blog.host.php last;
         #autoindex  on;
     }
@@ -24,25 +25,27 @@ server {
         fastcgi_param  PATH_INFO  $fastcgi_path_info;
         fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
         include        fastcgi_params;
+      
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Headers X-Requested-With;
+        add_header Access-Control-Allow-Credentials true; 
+        add_header Access-Control-Allow-Methods GET,POST;
+    }
+    location ~* \.(eot|ttf|woff|woff2|svg|otf)$ {
+        add_header Access-Control-Allow-Origin *;
+        #add_header Access-Control-Allow-Headers X-Requested-With;
+        #add_header Access-Control-Allow-Credentials true; 
+        add_header Access-Control-Allow-Methods GET;
     }
 }
 
 server {
     listen       80;
     server_name  dist.denha.loc;
-    root   "E:\cqproject\denha\console\dist";
+    root   "E:\www\denha\console\dist";
     location / {
         index  index.php index.html index.htm;
         #autoindex  on;
-    }
-    location ~ \.php(.*)$ {
-        fastcgi_pass   127.0.0.1:9000;
-        fastcgi_index  index.php;
-        fastcgi_split_path_info  ^((?U).+\.php)(/?.+)$;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        fastcgi_param  PATH_INFO  $fastcgi_path_info;
-        fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
-        include        fastcgi_params;
     }
 }
 
