--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,19 +8,11 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
-    RewriteCond %{HTTP_HOST} ^denha.loc [NC]
+    RewriteCond %{HTTP_HOST} ^jiankang.59156.cn [NC]
     RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic|\/uploadfile)(.*)$ [NC]
-    RewriteRule ^ pc.host.php
+    RewriteRule ^ chd.host.php
 
-    RewriteCond %{HTTP_HOST} ^console.denha.loc [NC]
-    RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic|\/uploadfile)(.*)$ [NC]
-    RewriteRule ^ console.host.php [L]
-
-    RewriteCond %{HTTP_HOST} ^blog.denha.loc [NC]
-    RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic|\/uploadfile)(.*)$ [NC]
-    RewriteRule ^ blog.host.php [L]
-
-    RewriteCond %{HTTP_HOST} ^admin.denha.loc [NC]
+    RewriteCond %{HTTP_HOST} ^jkadmin.59156.cn [NC]
     RewriteCond %{REQUEST_URI} !^(\/vendor|\/ststic|\/uploadfile)(.*)$ [NC]
     RewriteRule ^ admin.host.php [L]
 </IfModule>
